--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans:300,300i,400,400i,600,600i,700,800|Sacramento|Tangerine:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
 
     <!--
